# MA

./: .gitignore  Cargo.toml  README.md  build_docs.sh  doc.sh
.cargo/: config.toml
assets/: level.json  split.py
doc_themes/: catppuccin.css
docs/: Modules.md
docs/modules/: Graphics Module.md  Graphics.md  Utilities.md
docs/modules/graphics/: Camera.md
docs/modules/utilities/: Easing.md
src/: config.rs  main.rs
src/camera/: mod.rs  movement.rs  zoom.rs
src/camera/movement/: follow.rs  free.rs  input.rs  mod.rs
src/game_logic/: mod.rs
src/graphics/: camera.rs  mod.rs
src/graphics/camera/: zoom.rs
src/graphics/resources/: materials.rs  meshes.rs  mod.rs
src/input/: mod.rs
src/level_management/: mod.rs
src/physics/: mod.rs
src/player/: animation.rs  mod.rs  movement.rs
src/scene_management/: mod.rs
src/states/: editing.rs  mod.rs  playing.rs
src/utilities/: easing.rs  mod.rs  movement.rs
src/utilities/assets/: mod.rs
src/utilities/movement/: follow.rs  free.rs  mod.rs
