[package]
name = "matura-arbeit"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
bevy = { version = "0.14.0", features=["dynamic_linking"] }
bevy-inspector-egui = "0.25.1"
bevy-tnua = "0.19.0"
bevy-tnua-rapier2d = "0.7.0"
bevy_rapier2d = "0.27.0"
easer = "0.3.0"
strum = "0.26.3"
strum_macros = "0.26.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
